fix some layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -112,7 +112,7 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground flex flex-col min-h-screen overflow-hidden;
+    @apply bg-background text-foreground flex flex-col h-[100dvh] overflow-hidden;
   }
 }
 
